--- a/css/map.css
+++ b/css/map.css
@@ -23,7 +23,7 @@ body * {
   bottom: 100px;
   width: 100%;
   border: 0.5px solid #00000040 !important;
-  height: 409px;
+  height: 86%;
 }
 
 .punt-clicks {
