--- a/css/map.css
+++ b/css/map.css
@@ -1,6 +1,6 @@
 * {
   font-family: 'Roboto', open-sans !important;
-  overflow: hidden;
+  /* overflow: hidden; */
 }
 
 body {
@@ -18,12 +18,13 @@ body * {
 }
 
 #map {
-  position: absolute;
+  /* position: absolute; */
+  display: block;
   top: 0;
   bottom: 100px;
   width: 100%;
   border: 0.5px solid #00000040 !important;
-  height: 86%;
+  height: 400px;
 }
 
 .punt-clicks {
